Updated backend and frontend with latest changes